[package]
name = "netropy"
version = "0.1.1"
edition = "2024"
description = "allows minimal network simulation"
license = "MIT OR Apache-2.0"
repository = "https://github.com/am-software-solutions/netropy"

[dependencies]
thiserror = "2.0"
bytes = "1.10"
tracing = "0.1"
tracing-subscriber = { version ="0.3" }
tokio = { version = "1.32", features = ["full"] }
rand = "0.9"
